Closed Bug 449371 Opened 17 years ago Closed 17 years ago

latest thunderbird crashed when exiting on OpenSolaris

Categories

(Firefox :: General, defect)

x86
OpenSolaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: eagle.lu, Assigned: eagle.lu)

References

Details

Attachments

(3 files)

Thunderbird failed to be launched on OpenSolaris.
(In reply to comment #0) > Thunderbird failed to be launched on OpenSolaris. > Sorry my mistake, It should be Thunderbird crashed when exiting. The root cause is in following snippet: nsresult nsScreenManagerGtk :: Init() { ... // get the number of screens via xinerama if (_XnrmIsActive && _XnrmQueryScreens && _XnrmIsActive(GDK_DISPLAY())) { screenInfo = _XnrmQueryScreens(GDK_DISPLAY(), &numScreens); } ... } On OpenSolaris, when XineramaIsActive() is called, it will register the address of close_display() in X, so it will be called when XCloseDisplay() is called But before XCloseDisplay() is called, the following deconstructor is called nsScreenManagerGtk :: ~nsScreenManagerGtk() { ... if (mXineramalib && mXineramalib != SCREEN_MANAGER_LIBRARY_LOAD_FAILED) { PR_UnloadLibrary(mXineramalib); } ... } So, libXinerama.so is unloaded and the function address registered in X (i.e. close_display()) is invalid when XCloseDisplay() is called This causes thunderbird crashes.
Assignee: nobody → brian.lu
Attached patch patchSplinter Review
Attachment #332513 - Flags: review?
Summary: Crash: Failed to launch latest thunderbird on OpenSolaris → latest thunderbird crashed when exiting on OpenSolaris
Attachment #332513 - Flags: review? → review?(vladimir)
Comment on attachment 332513 [details] [diff] [review] patch This is fine, but please put a comment above the #if explaining what you explained in the previous comment, so that people reading this code in the future know why the library isn't unloaded on solaris.
Attachment #332513 - Flags: review?(vladimir) → review+
Attachment #332681 - Flags: superreview?(roc)
Attachment #332681 - Flags: superreview?(roc) → superreview+
Keywords: checkin-needed
Blocks: 449757
This patch does not apply anymore. Can you attach a new version?
Pushed with a small change to comment line http://hg.mozilla.org/index.cgi/mozilla-central/rev/784bd07695bc
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: