Bug 449371 Firefox/Thunderbird crashes at exit [@ gdk_display_x11_finalize], p=Brian.Lu at sun.com r=vladimir sr=roc